fix FindBugs issues: DM_BOOLEAN_CTOR, RCN_REDUNDANT_NULLCHECK_OF_NONNULL_VALUE,         DM_FP_NUMBER_CTOR, WMI_WRONG_MAP_ITERATOR, DLS_DEAD_LOCAL_STORE
svn path=/trunk/; revision=45611


Former-commit-id: a34e1c8d15bac5f3e1244ef8008d719c48b2d0a1